--- a/DSCapture/DSCapture/DSCapture-Info.plist
+++ b/DSCapture/DSCapture/DSCapture-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.DS.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -23,7 +23,7 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2012 Dongsung &quot;Don&quot; Kim</string>
+	<string>Copyright © 2012 Dongsung "Don" Kim</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
